# telegram-feedback-bot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.json.dist  pyproject.toml
.github/workflows/: unittests.yaml
src/: bot.py  config.py  exceptions.py  main.py  shortcuts.py
src/filters/: __init__.py  allowed_chat_ids.py  inverse.py  is_chat_id_allowed.py  is_chat_id_in_message_text.py  is_message_text_length_allowed.py  is_reply_to_message.py
src/handlers/: __init__.py  admins.py  common.py  users.py
src/middlewares/: __init__.py  config_inject.py  inject.py
tests/: test_get_message.py  test_message_signature.py
tests/test_filters/: test_is_chat_id_allowed.py  test_is_chat_id_in_message_text.py  test_is_message_text_length_allowed.py  test_is_reply_to_message.py
